[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://addons/character_input_controller/input_controller_ui.gd" type="Script" id=2]
[ext_resource path="res://addons/character_input_controller/assets/analog_stick_exterior.png" type="Texture" id=3]
[ext_resource path="res://addons/character_input_controller/assets/analog_stick_interior.png" type="Texture" id=4]

[node name="InputUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovementInputBlocker" type="Control" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="MovementInputBlocker"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="CameraRotationInputBlocker" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Background" type="TextureRect" parent="CameraRotationInputBlocker"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="MovementAnalogAnchor" type="Sprite" parent="."]
visible = false
scale = Vector2( 2.38387, 2.38387 )
texture = ExtResource( 3 )

[node name="AnalogStick" type="Sprite" parent="MovementAnalogAnchor"]
texture = ExtResource( 4 )

[node name="AnalogStickExterior" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = -223.0
margin_right = 226.0
margin_bottom = -23.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnalogStickInterior" type="TextureRect" parent="AnalogStickExterior"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -67.5
margin_right = 67.5
margin_bottom = 67.5
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
